[gd_scene load_steps=5 format=3 uid="uid://d37xvesjov7p5"]

[ext_resource type="Script" path="res://scenes_and_scripts/level.gd" id="1_244du"]
[ext_resource type="VideoStream" path="res://generated/8_sides_of_nico_nico_douga.ogv" id="1_c6xx3"]

[sub_resource type="Animation" id="Animation_1v14w"]
resource_name = "8_sides_of_nico_nico_douga"
length = 700.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AspectRatioContainer/VideoStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 14.5, 24.629, 35.003, 56.759, 77.501, 88.4, 98.934, 108.803, 119.978, 129.85, 140.212, 151.382, 161.589, 172.601, 182.985, 204.144, 225.374, 235.793, 249.419, 270.576, 291.497, 314.563, 347.95, 368.478, 378.724, 391.25, 401.098, 434.354, 445.007, 455.122, 462.668, 464.246, 474.956, 485.424, 504.717, 515.599, 525.548, 533.118, 538.332, 548.444, 568.758, 578.649, 584, 586.973, 589, 591, 594, 597, 599, 602, 604, 607, 609, 612, 617, 623.223, 643.17, 653.281, 666.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [""],
"method": &"update_text_to_type"
}, {
"args": ["Black Rock Shooter"],
"method": &"update_text_to_type"
}, {
"args": [""],
"method": &"update_text_to_type"
}, {
"args": ["Heavenly Star"],
"method": &"update_text_to_type"
}, {
"args": ["Do-Dai"],
"method": &"update_text_to_type"
}, {
"args": ["Mi-w-na-w-gi-w-t-w-te-w-ki-w-ta-www & Under My Skin"],
"method": &"update_text_to_type"
}, {
"args": ["Night of Nights & Dancing Samurai"],
"method": &"update_text_to_type"
}, {
"args": ["Sand Canyon"],
"method": &"update_text_to_type"
}, {
"args": ["Sky High & Pop Star"],
"method": &"update_text_to_type"
}, {
"args": ["Got The Groove"],
"method": &"update_text_to_type"
}, {
"args": ["Septette for the Dead Princess"],
"method": &"update_text_to_type"
}, {
"args": ["Bad Apple!!"],
"method": &"update_text_to_type"
}, {
"args": ["Ora Tokyo sa Igu da"],
"method": &"update_text_to_type"
}, {
"args": ["Rainbow Girl"],
"method": &"update_text_to_type"
}, {
"args": ["Karate"],
"method": &"update_text_to_type"
}, {
"args": ["Starry Sky"],
"method": &"update_text_to_type"
}, {
"args": ["Hello Windows"],
"method": &"update_text_to_type"
}, {
"args": ["Saikyou Pare Parade"],
"method": &"update_text_to_type"
}, {
"args": ["Sora"],
"method": &"update_text_to_type"
}, {
"args": ["Celluloid"],
"method": &"update_text_to_type"
}, {
"args": ["Hatsune Miku no Shoushitsu"],
"method": &"update_text_to_type"
}, {
"args": ["Lion"],
"method": &"update_text_to_type"
}, {
"args": ["Seikan Hikou"],
"method": &"update_text_to_type"
}, {
"args": ["Nihon no Mikata -Nevada Kara Kimashita-"],
"method": &"update_text_to_type"
}, {
"args": ["Promise"],
"method": &"update_text_to_type"
}, {
"args": ["Tamashii no Refrain"],
"method": &"update_text_to_type"
}, {
"args": ["World is Mine"],
"method": &"update_text_to_type"
}, {
"args": ["Beloved Tomboyish Girl"],
"method": &"update_text_to_type"
}, {
"args": ["Town & PoPiPo"],
"method": &"update_text_to_type"
}, {
"args": ["The Solar Tribe from Mizonokuchi"],
"method": &"update_text_to_type"
}, {
"args": ["Ponyo on a Cliff by the Sea"],
"method": &"update_text_to_type"
}, {
"args": ["Hakata no Shio"],
"method": &"update_text_to_type"
}, {
"args": ["smooooch"],
"method": &"update_text_to_type"
}, {
"args": ["Double Lariat"],
"method": &"update_text_to_type"
}, {
"args": ["Tewi! ~Eien Tewi ver.~"],
"method": &"update_text_to_type"
}, {
"args": ["Meltdown"],
"method": &"update_text_to_type"
}, {
"args": ["Ojamajo Carnival!!"],
"method": &"update_text_to_type"
}, {
"args": ["Aoku Moeru Honoo"],
"method": &"update_text_to_type"
}, {
"args": ["The Regulars"],
"method": &"update_text_to_type"
}, {
"args": ["Hammer Melody"],
"method": &"update_text_to_type"
}, {
"args": ["Red Zone"],
"method": &"update_text_to_type"
}, {
"args": [""],
"method": &"update_text_to_type"
}, {
"args": ["Konayuki & Endless Rain"],
"method": &"update_text_to_type"
}, {
"args": ["Uninstall & true my heart"],
"method": &"update_text_to_type"
}, {
"args": ["Let's Go! Onmyouji"],
"method": &"update_text_to_type"
}, {
"args": ["Marisa Stole the Precious Thing & Futari no Mojipittan"],
"method": &"update_text_to_type"
}, {
"args": ["Skill & Dr. Wily Stage 1"],
"method": &"update_text_to_type"
}, {
"args": ["Tsurupettan & Hare Hare Yukai &  Gacha Gacha Cute"],
"method": &"update_text_to_type"
}, {
"args": ["Agent Yoru o Yuku"],
"method": &"update_text_to_type"
}, {
"args": ["You are the Prince of Tennis"],
"method": &"update_text_to_type"
}, {
"args": ["You & Motteke! Sailor Fuku"],
"method": &"update_text_to_type"
}, {
"args": ["Help me, ERINNNNNN!!"],
"method": &"update_text_to_type"
}, {
"args": ["GO MY WAY!! & Airman ga Taosenai"],
"method": &"update_text_to_type"
}, {
"args": ["Melt & Little Busters!"],
"method": &"update_text_to_type"
}, {
"args": ["God knows... & Cheetahmen 2 Theme & Genesis of Aquarion"],
"method": &"update_text_to_type"
}, {
"args": ["Miku Miku ni Shite Ageru & Caramelldansen & U.N. Owen was her? & Makka na Chikai"],
"method": &"update_text_to_type"
}, {
"args": ["Don't say \"lazy\""],
"method": &"update_text_to_type"
}, {
"args": ["Nico Nico Douga"],
"method": &"update_text_to_type"
}, {
"args": ["Jacku Jacku Douga"],
"method": &"update_text_to_type"
}, {
"args": [""],
"method": &"update_text_to_type"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qhebo"]
_data = {
"8_sides_of_nico_nico_douga": SubResource("Animation_1v14w")
}

[node name="Level" type="Node"]
script = ExtResource("1_244du")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7778

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="AspectRatioContainer"]
layout_mode = 2
stream = ExtResource("1_c6xx3")
expand = true

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 50
text = "Score: 0"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TextToType" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 50

[node name="UserInput" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 50

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
callback_mode_process = 0
libraries = {
"": SubResource("AnimationLibrary_qhebo")
}

[connection signal="correct_title_entered" from="." to="AnimationPlayer" method="play" flags=6 binds= [&"8_sides_of_nico_nico_douga"]]
